# seal-calibration

./: .gitignore  README.md  pyproject.toml  requirement.txt  setup.py
.github/: FUNDING.yml
examples/: README.md  basic_calibration.py  seal_format_export.py  stereo_calibration.npz  stereo_calibration.py  stereo_calibration_complete.py  stereo_to_seal.py
examples/patterns/: README.md  Sketch1.dxf
seal_calibration/: __init__.py
seal_calibration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
seal_calibration/core/: __init__.py  camera.py  charuco_camera.py  projector.py  stereo.py  validation.py
seal_calibration/io/: __init__.py  loader.py  parser.py  writer.py
seal_calibration/models/: __init__.py  camera_params.py  seal_calib.py  stereo_params.py
seal_calibration/pattern/: __init__.py  charuco.py  chessboard.py  circles.py  stripes.py
seal_calibration/utils/: __init__.py  geometry.py  image.py  validation.py  visualization.py
seal_calip/: basic_scan.py  calibJMS1006207.txt  scan_example.py  stereo_calibration.npz  stereo_calibration.py  stereo_to_seal.py
