[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "seal-calibration"
author = "Anton Sychev"
authors = [
    {name = "Anton Sychev", email = "anton@sychev.xyz"}
]
version = "0.1.0"
description = "Calibration library for 3DMakerPro SEAL 3D scanners"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "CC BY-NC 4.0"}
dependencies = [
    "numpy>=1.24,<3",
    "opencv-python>=4.6,<5"
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
